--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MAP_debug.MAP_debug
+GameDefaultMap=/Game/Maps/MAP_Field.MAP_Field
 GlobalDefaultGameMode=/Game/Blueprints/GM_Runner.GM_Runner_C
-EditorStartupMap=/Game/Maps/MAP_debug.MAP_debug
+EditorStartupMap=/Game/Maps/MAP_Field.MAP_Field
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
